--- a/ReSharper.FSharp/src/FSharp.Psi.Features/FSharp.Psi.Features.fsproj
+++ b/ReSharper.FSharp/src/FSharp.Psi.Features/FSharp.Psi.Features.fsproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="src\Parsing\Lexing\Postprocessing.fs" />
+    <Compile Include="src\Parsing\Lexing\Context.fs" />
+    <Compile Include="src\Parsing\Lexing\LexicalFilter.fs" />
     <Compile Include="src\StringLiteralsUtil.fs" />
     <Compile Include="src\CodeCompletion\CompletionUtil.fs" />
     <Compile Include="src\CodeCompletion\FSharpCodeCompletionContext.fs" />
