Implement push and pop context in stack

--- a/ReSharper.FSharp/src/FSharp.Psi.Features/FSharp.Psi.Features.fsproj
+++ b/ReSharper.FSharp/src/FSharp.Psi.Features/FSharp.Psi.Features.fsproj
@@ -8,7 +8,9 @@
   <ItemGroup>
     <Compile Include="src\Util\StringLiteralsUtil.fs" />
     <Compile Include="src\Util\PsiUtil.fs" />
+    <Compile Include="src\Util\ImmutableStack.fs" />
     <Compile Include="src\Parsing\Lexing\Postprocessing.fs" />
+    <Compile Include="src\Parsing\Lexing\Context.fs" />
     <Compile Include="src\CodeCompletion\CompletionUtil.fs" />
     <Compile Include="src\CodeCompletion\FSharpCodeCompletionContext.fs" />
     <Compile Include="src\CodeCompletion\FSharpPathCompletionProvider.fs" />
