--- a/ReSharper.FSharp/src/FSharp.Psi.Features/FSharp.Psi.Features.fsproj
+++ b/ReSharper.FSharp/src/FSharp.Psi.Features/FSharp.Psi.Features.fsproj
@@ -9,6 +9,7 @@
     <Compile Include="src\Util\StringLiteralsUtil.fs" />
     <Compile Include="src\Util\PsiUtil.fs" />
     <Compile Include="src\Util\ImmutableStack.fs" />
+    <Compile Include="src\Util\FSharpTokenUtil.fs" />
     <Compile Include="src\Parsing\Lexing\Postprocessing.fs" />
     <Compile Include="src\Parsing\Lexing\Context.fs" />
     <Compile Include="src\Parsing\Lexing\LexicalFilter.fs" />
